DuPont DevSB/src/objects/Material_Type__c.object
<CustomObject>
    <fields>
        <fullName>Areal_Density__c</fullName>
        <label>Areal Density</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_Armor_SAP_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Body Armor SAP Solution</label>
        <referenceTo>Body_Armor_Solution__c</referenceTo>
        <relationshipLabel>BA Material Types</relationshipLabel>
        <relationshipName>Materials_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GSM__c</fullName>
        <label>GSM</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material_Price_SAP__c</fullName>
        <label>Material Price SAP</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_used__c</fullName>
        <label>Material used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Layers__c</fullName>
        <label>Number of Layers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_UOM__c</fullName>
        <label>Unit Price</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BA Material Master</label>
        <referenceTo>Material_Master__c</referenceTo>
        <relationshipLabel>BA Materials Types</relationshipLabel>
        <relationshipName>Materials_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thickness__c</fullName>
        <label>Thickness</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BA Material Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Select Material</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA Material Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>